# klaris

./: .dockerignore  .env.digitalocean.example  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.digitalocean.yml  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
app/: main.py
app/core/: config.py  database.py  exceptions.py  logging.py  security.py
bot/: __init__.py  cache.py  config.py  embeds.py  errors.py  feedback_view.py  formatting.py  guards.py  i18n.py  klaris_client.py  main.py  notifications.py  pagination.py  rag_client.py  rate_limit.py
bot/cogs/: admin.py  ask.py  chat.py  feedback_cog.py  help.py  invite.py  stats.py  utility.py
docs/: ai-development-rules.md  architecture.md  coding-standards.md  database.md  deployment.md  digitalocean-deployment.md  discord-bot.md  ingestion.md  production-readiness.md  rag.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_pg_trgm_title_search.py  0003_rag_improvement_feedback.py
scripts/: ingest_all_pages.py  ingest_category.py  rebuild_embeddings.py  reset_database.py  setup-runner.sh
tests/: test_admin_security.py  test_answer_policy.py  test_chunker.py  test_cleaner.py  test_discord_bot.py  test_health.py  test_ingestion_pipeline.py  test_ingestion_router.py  test_klaris_agent.py  test_klaris_client.py  test_klaris_tools.py  test_rag_improvement.py  test_rag_prompt.py  test_rag_query.py  test_rag_safety.py  test_retriever.py  test_source_selection.py
(+30 files in other folders)
